# code-intel

./: .gitignore  main.py  pyproject.toml
src/code_intel/: main.py
src/code_intel/agent/: simple_agent.py  tools.py
src/code_intel/llm/: llm_service.py
src/code_intel/memory/: chroma_service.py
src/code_intel/parser/: python_parser.py
src/code_intel/storage/: neo4j_client.py
