[project]
name = "code-intel-cli"
version = "0.1.0"
description = "Hybrid Code Intelligence CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "neo4j>=6.1.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true